--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ project/plugins/project/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+iml,scala,sbt,java
+/src/main/resources/steam_reviews.csv
