:sparkles: Replaced Java Serialization with Jackson-CBOR serialization

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,9 @@ akka {
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
   actor {
-    allow-java-serialization = true
+    serialization-bindings {
+      "dev.galre.josue.akkaProject.util.CborSerializable" = jackson-cbor
+    }
   }
 
   persistence {
