--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,7 @@
-networks:
-  cassandra:
 services:
-  cassandra-1:
+  cassandra:
     image: cassandra:latest
-    container_name: cassandra-node-1
-    hostname: cassandra-node-1
-    healthcheck:
-      test: [ "CMD", "cqlsh", "-e", "describe keyspaces" ]
-      interval: 5s
-      timeout: 5s
-      retries: 60
-    networks:
-      - cassandra
     ports:
-      - "9042:9042"
+      - 9042:9042
     environment:
-      &environment
-      CASSANDRA_SEEDS: "cassandra-1,cassandra-2"
-      CASSANDRA_CLUSTER_NAME: steam-data-cluster
-      CASSANDRA_DC: steam-datacenter
-      CASSANDRA_RACK: Unique
-      CASSANDRA_ENDPOINT_SNITCH: GossipingPropertyFileSnitch
-      CASSANDRA_NUM_TOKENS: 128
-      HEAP_NEWSIZE: 300M
-      MAX_HEAP_SIZE: 1G
-  cassandra-2:
-    image: cassandra:latest
-    container_name: cassandra-node-2
-    hostname: cassandra-node-2
-    healthcheck:
-      test: [ "CMD", "cqlsh", "-e", "describe keyspaces" ]
-      interval: 5s
-      timeout: 5s
-      retries: 60
-    networks:
-      - cassandra
-    ports:
-      - "9043:9042"
-    environment: *environment
-    restart: on-failure
-    depends_on:
-      - cassandra-1
-  cassandra-3:
-    image: cassandra:latest
-    container_name: cassandra-node-3
-    hostname: cassandra-node-3
-    healthcheck:
-      test: [ "CMD", "cqlsh", "-e", "describe keyspaces" ]
-      interval: 5s
-      timeout: 5s
-      retries: 60
-    networks:
-      - cassandra
-    ports:
-      - "9044:9042"
-    environment: *environment
-    restart: on-failure
-    depends_on:
-      - cassandra-2
+      - CASSANDRA_CLUSTER_NAME=akka-project-cluster
