:sparkles: Disabled snapshotting as breaks system

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,7 @@ akka {
 
   actor {
     serialization-bindings {
-      "dev.galre.josue.akkaProject.util.CborSerializable" = jackson-cbor
+      "dev.galre.josue.akkaProject.util.CborSerializable" = jackson-json
     }
   }
 
